Builds/Android/app/.cxx/cmake/debug_Debug/x86/android_gradle_build_juce_jni_x86.stdout.txt
ninja: Entering directory `C:\Users\richa\Documents\GitHub\Audiobook-Engine-Alpha\Builds\Android\app\.cxx\cmake\debug_Debug\x86'
[1/2] Building CXX object CMakeFiles/juce_jni.dir/C_/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp.o
FAILED: CMakeFiles/juce_jni.dir/C_/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp.o 
C:\Users\richa\AppData\Local\Android\Sdk\ndk\21.0.6113669\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=i686-none-linux-android16 --gcc-toolchain=C:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64/sysroot  -DDEBUG=1 -DJUCER_ANDROIDSTUDIO_7F0E4A25=1 -DJUCE_ANDROID=1 -DJUCE_ANDROID_API_VERSION=16 -DJUCE_APP_VERSION=1.0.0 -DJUCE_APP_VERSION_HEX=0x10000 -DJUCE_DISPLAY_SPLASH_SCREEN=1 -DJUCE_GLOBAL_MODULE_SETTINGS_INCLUDED=1 -DJUCE_MODULE_AVAILABLE_juce_audio_basics=1 -DJUCE_MODULE_AVAILABLE_juce_audio_devices=1 -DJUCE_MODULE_AVAILABLE_juce_audio_formats=1 -DJUCE_MODULE_AVAILABLE_juce_audio_processors=1 -DJUCE_MODULE_AVAILABLE_juce_audio_utils=1 -DJUCE_MODULE_AVAILABLE_juce_core=1 -DJUCE_MODULE_AVAILABLE_juce_data_structures=1 -DJUCE_MODULE_AVAILABLE_juce_events=1 -DJUCE_MODULE_AVAILABLE_juce_graphics=1 -DJUCE_MODULE_AVAILABLE_juce_gui_basics=1 -DJUCE_MODULE_AVAILABLE_juce_gui_extra=1 -DJUCE_MODULE_AVAILABLE_juce_osc=1 -DJUCE_PROJUCER_VERSION=0x60008 -DJUCE_PUSH_NOTIFICATIONS=1 -DJUCE_PUSH_NOTIFICATIONS_ACTIVITY=\"com/rmsl/juce/JuceActivity\" -DJUCE_STANDALONE_APPLICATION=1 -DJUCE_STRICT_REFCOUNTEDPOINTER=1 -DJUCE_USE_DARK_SPLASH_SCREEN=1 -DOBOE_ENABLE_LOGGING=1 -D_DEBUG=1 -Djuce_jni_EXPORTS -I../../../../../../../JuceLibraryCode -IC:/JUCE/modules -IC:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/sources/android/cpufeatures -IC:/JUCE/modules/juce_audio_devices/native/oboe/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -mstackrealign -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security -fexceptions -frtti  -O0 -fno-limit-debug-info -O0 -fPIC   -fsigned-char -std=c++14 -MD -MT CMakeFiles/juce_jni.dir/C_/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp.o -MF CMakeFiles\juce_jni.dir\C_\Users\richa\Documents\GitHub\Audiobook-Engine-Alpha\Source\Main.cpp.o.d -o CMakeFiles/juce_jni.dir/C_/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp.o -c C:/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp
In file included from C:/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp:10:
C:/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/MainComponent.h:171:36: error: no viable conversion from 'int' to 'std::function<void (const FileChooser &)>'
        if (chooser.launchAsync(4, 4))
                                   ^
C:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\functional:2283:5: note: candidate constructor not viable: no known conversion from 'int' to 'std::nullptr_t' (aka 'nullptr_t') for 1st argument
    function(nullptr_t) _NOEXCEPT {}
    ^
C:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\functional:2284:5: note: candidate constructor not viable: no known conversion from 'int' to 'const std::__ndk1::function<void (const juce::FileChooser &)> &' for 1st argument
    function(const function&);
    ^
C:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\functional:2285:5: note: candidate constructor not viable: no known conversion from 'int' to 'std::__ndk1::function<void (const juce::FileChooser &)> &&' for 1st argument
    function(function&&) _NOEXCEPT;
    ^
C:/Users/richa/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\functional:2287:5: note: candidate template ignored: requirement '__callable<int, false>::value' was not satisfied [with _Fp = int]
    function(_Fp);
    ^
C:/JUCE/modules\juce_gui_basics/filebrowser/juce_FileChooser.h:213:63: note: passing argument to parameter here
                      std::function<void (const FileChooser&)>,
                                                              ^
C:/Users/richa/Documents/GitHub/Audiobook-Engine-Alpha/Source/Main.cpp:66:34: error: unknown type name 'MainComponent'; did you mean 'Component'?
            setContentOwned (new MainComponent(), true);
                                 ^~~~~~~~~~~~~
                                 Component
C:/JUCE/modules\juce_gui_basics/components/juce_Component.h:35:17: note: 'Component' declared here
class JUCE_API  Component  : public MouseListener
                ^
2 errors generated.
ninja: build stopped: subcommand failed.
